--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,7 @@ AM_CPPFLAGS = \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
-	$(GVOLWHEEL_CFLAGS)
+	$(GTK_CFLAGS)
 
 AM_CFLAGS =\
 	 -Wall\
@@ -17,16 +17,22 @@ bin_PROGRAMS = gvolwheel
 
 gvolwheel_SOURCES = \
 	main.c \
-	eggtrayicon.c \
-	eggtrayicon.h \
 	actions.c \
 	actions.h \
 	callbacks.c \
-	callbacks.h
+	callbacks.h \
+	trayicon.h \
+	conf.c \
+	conf.h \
+	trayicon.c \
+	volume.c \
+	volume.h \
+	configwindow.c \
+	configwindow.h
 
 gvolwheel_LDFLAGS = \
 	-Wl,--export-dynamic
 
-gvolwheel_LDADD = $(GVOLWHEEL_LIBS)
+gvolwheel_LDADD = $(GTK_LIBS)
 
 EXTRA_DIST = $(glade_DATA)
