--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,8 @@ AM_CPPFLAGS = \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
-	$(GTK_CFLAGS)
+	$(GTK_CFLAGS) \
+        ${ALSA_CFLAGS}
 
 AM_CFLAGS =\
 	 -Wall\
@@ -15,24 +16,31 @@ AM_CFLAGS =\
 
 bin_PROGRAMS = gvolwheel
 
+if BACKEND_ALSA
+BACKEND = alsa.c alsa.h
+else
+BACKEND = oss.c oss.h
+endif
+
 gvolwheel_SOURCES = \
 	main.c \
 	actions.c \
 	actions.h \
 	callbacks.c \
 	callbacks.h \
-	trayicon.h \
 	conf.c \
 	conf.h \
-	trayicon.c \
 	volume.c \
 	volume.h \
 	configwindow.c \
-	configwindow.h
+	configwindow.h \
+	trayicon.c \
+	trayicon.h \
+        $(BACKEND)
 
 gvolwheel_LDFLAGS = \
 	-Wl,--export-dynamic
 
-gvolwheel_LDADD = $(GTK_LIBS)
+gvolwheel_LDADD = $(GTK_LIBS) ${ALSA_LIBS}
 
 EXTRA_DIST = $(glade_DATA)
