--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ autom4te.cache
 /aclocal.m4
 /compile
 /config.guess
+/config.h
 /config.h.in
 /config.log
 /config.status
@@ -25,15 +26,20 @@ autom4te.cache
 /stamp-h1
 /ltmain.sh
 /texinfo.tex
+/COPYING
+/INSTALL
 m4/libtool.m4
 m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
+/libtool
 /intltool
 /intltool-*
 /missing
 /mkinstalldirs
+/src/Makefile
+/src/Makefile.in
 
 #-----------------------------------------------------------------------
 # /po/
@@ -43,6 +49,8 @@ m4/lt~obsolete.m4
 /po/*.header
 /po/.intltool-merge-cache
 /po/LINGUAS
+/po/Makefile
+/po/Makefile.in
 /po/Makefile.in.in
 /po/Makevars
 /po/*.mo
