fix README. update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ autom4te.cache
 /missing
 /mkinstalldirs
 /libtool
+/src/gvolwheel
 
 #-----------------------------------------------------------------------
 # /po/
